--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+.primary {
+  background-color: #1976d2;
+  color: white;
+}
+
+.secondary {
+  background-color: red;
+  color: white;
+}
+
+.btn {
+  border: none;
+  padding: 16px;
+  border-radius: 4px;
+  margin-left: 10px;
+  &:hover {
+    cursor: pointer;
+  }
+}
