--- a/src/app/todo-view/todo-view.component.html
+++ b/src/app/todo-view/todo-view.component.html
@@ -1,5 +1,11 @@
-<span class="todo-title" [ngClass]="{ done: todo.done }">{{ todo.title }}</span>
-<button class="btn primary" (click)="toggleDone(todo)">
-  {{ !todo.done ? "Done" : "Undone" }}
-</button>
-<button class="btn secondary" (click)="removeTodo(todo)">Remove</button>
+<ul class="todo-list" *ngIf="todos.length !== 0">
+  <li *ngFor="let todo of todos">
+    <span class="todo-title" [ngClass]="{ done: todo.done }">{{ todo.title }}</span>
+
+    <button class="btn primary" (click)="toggleDone(todo)">
+      {{ !todo.done ? "Done" : "Undone" }}
+    </button>
+
+    <button class="btn secondary" (click)="removeTodo(todo)">Remove</button>
+  </li>
+</ul>
